--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             animation: slideInLeft 1s ease-out forwards;
         }
         header .part2.animated {
-            animation: slideInLeft 1s ease-out 1.3s forwards;
+            animation: slideInLeft 1s ease-out 0.8s forwards;
         }
         header p.animated {
-            animation: slideInRight 1s ease-out 2.3s forwards;
+            animation: slideInRight 1s ease-out 1.7s forwards;
         }
         header .slogan.animated {
-            animation: slideInRight 1s ease-out 2.3s forwards;
+            animation: slideInRight 1s ease-out 1.7s forwards;
         }
         header p {
             font-size: 1.4em;
@@ -331,21 +331,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: transform 0.3s, box-shadow 0.3s, opacity 0.6s;
+            transition: transform 0.3s, box-shadow 0.3s;
             cursor: pointer;
             opacity: 0;
+            transform: translateY(50px);
         }
         .whatsapp-float img {
             width: 40px;
             height: 40px;
             object-fit: contain;
-            transition: opacity 0.6s;
         }
         .whatsapp-float.show {
-            opacity: 1;
-        }
-        .whatsapp-float.show img {
-            opacity: 1;
+            animation: floatIn 1s ease-out 0.8s forwards;
         }
         .whatsapp-float:hover {
             transform: scale(1.15);
@@ -392,6 +389,10 @@
             to { opacity: 1; transform: translateX(0); }
         }
         @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(50px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes floatIn {
             from { opacity: 0; transform: translateY(50px); }
             to { opacity: 1; transform: translateY(0); }
         }
@@ -679,26 +680,26 @@
         // Scroll to top and initialize animations on page load
         window.onload = function() {
             window.scrollTo(0, 0);
-            document.querySelector('.whatsapp-float').classList.add('show');
             triggerHeaderAnimations();
         };
 
-        // Function to trigger header animations
+        // Function to trigger header and WhatsApp float animations
         function triggerHeaderAnimations() {
             document.querySelector('.part1').classList.add('animated');
             document.querySelector('.part2').classList.add('animated');
             document.querySelector('header p').classList.add('animated');
             document.querySelector('.slogan').classList.add('animated');
+            document.querySelector('.whatsapp-float').classList.add('show');
         }
 
-        // Close popup and replay header animations
+        // Close popup and replay header and WhatsApp float animations
         function closePopup() {
             document.getElementById('welcomePopup').classList.remove('show');
-            document.querySelector('.whatsapp-float').classList.add('show');
             document.querySelector('.part1').classList.remove('animated');
             document.querySelector('.part2').classList.remove('animated');
             document.querySelector('header p').classList.remove('animated');
             document.querySelector('.slogan').classList.remove('animated');
+            document.querySelector('.whatsapp-float').classList.remove('show');
             setTimeout(triggerHeaderAnimations, 100);
         }
 
