--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         }
         .card p {
             margin: 0.6em 0;
-            font-size: 1em;
+            font-size: 1.1em;
             position: relative;
             z-index: 1;
         }
@@ -220,7 +220,7 @@
             margin: 0 auto;
             font-size: 1.1em;
             line-height: 1.2;
-            padding-left: 1.5em;
+            padding-left: 2.5em;
         }
         .contact-info p {
             margin: 0.05em 0;
@@ -249,16 +249,33 @@
         .contact-info a:hover {
             color: #1e3a8a;
         }
-        .contact-buttons {
+        .guide-section {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .links-container {
+            margin-bottom: 0.5em;
             display: flex;
             justify-content: space-between;
-            max-width: 600px;
-            margin: 1.5em auto 0;
-            gap: 1em;
+            width: 100%;
         }
-        .contact-buttons a {
-            flex: 1;
+        .links-container a {
+            flex: 0 0 auto;
             text-align: center;
+            width: 198px;
+            white-space: nowrap;
+        }
+        .links-container .gallery-btn {
+            margin-right: auto;
+            margin-left: 0;
+        }
+        .links-container .guide-btn {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .links-container .payment-btn {
+            margin-left: auto;
+            margin-right: 0;
         }
         .popup {
             position: fixed;
@@ -359,9 +376,9 @@
             transform: scale(1.15);
             box-shadow: 0 8px 25px rgba(0,0,0,0.4);
         }
-        .payment-btn, .gallery-btn {
+        .payment-btn, .gallery-btn, .guide-btn {
             display: inline-block;
-            padding: 12px 30px;
+            padding: 12px 0;
             background: linear-gradient(45deg, #1e3a8a, #3b82f6);
             color: white;
             text-decoration: none;
@@ -369,8 +386,10 @@
             font-weight: bold;
             transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
             box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            white-space: nowrap;
+            text-align: center;
         }
-        .payment-btn:hover, .gallery-btn:hover {
+        .payment-btn:hover, .gallery-btn:hover, .guide-btn:hover {
             transform: scale(1.15);
             box-shadow: 0 6px 20px rgba(0,0,0,0.3);
             background: linear-gradient(45deg, #3b82f6, #1e3a8a);
@@ -462,12 +481,35 @@
                 background: linear-gradient(135deg, #f0f7ff, #ffffff);
             }
             .card h3 { font-size: 1.5em; }
-            .card p { font-size: 0.9em; }
+            .card p { font-size: 1em; }
             .btn { padding: 10px 20px; font-size: 0.9em; }
             .card.best::after {
                 top: 8px;
                 right: 8px;
                 font-size: 1.8em;
+            }
+            .guide-section {
+                max-width: 100%;
+                margin: 0;
+            }
+            .links-container {
+                flex-direction: row;
+                gap: 0.5em;
+            }
+            .links-container a {
+                width: 158.4px;
+            }
+            .links-container .gallery-btn {
+                margin-right: auto;
+                margin-left: 0;
+            }
+            .links-container .guide-btn {
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .links-container .payment-btn {
+                margin-left: auto;
+                margin-right: 0;
             }
             #contact { 
                 margin: 2em 0.5em; 
@@ -481,7 +523,11 @@
                 grid-template-columns: 1fr auto 2fr; 
                 gap: 0.1em;
                 line-height: 1.2;
-                padding-left: 1.2em;
+                padding-left: 2em;
+            }
+            .contact-info i {
+                font-size: 1em;
+                margin-right: 0.6em;
             }
             .contact-info p {
                 margin: 0.05em 0;
@@ -510,8 +556,8 @@
                 width: 34px;
                 height: 34px;
             }
-            .payment-btn, .gallery-btn {
-                padding: 10px 25px;
+            .payment-btn, .gallery-btn, .guide-btn {
+                padding: 10px 0;
                 font-size: 0.9em;
             }
             footer { padding: 0.25em; }
@@ -541,12 +587,35 @@
                 background: linear-gradient(135deg, #f0f7ff, #ffffff);
             }
             .card h3 { font-size: 1.3em; }
-            .card p { font-size: 0.8em; }
+            .card p { font-size: 0.9em; }
             .btn { padding: 8px 15px; font-size: 0.8em; }
             .card.best::after {
                 top: 5px;
                 right: 5px;
                 font-size: 1.5em;
+            }
+            .guide-section {
+                max-width: 100%;
+                margin: 0;
+            }
+            .links-container {
+                flex-direction: row;
+                gap: 0.3em;
+            }
+            .links-container a {
+                width: 132px;
+            }
+            .links-container .gallery-btn {
+                margin-right: auto;
+                margin-left: 0;
+            }
+            .links-container .guide-btn {
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .links-container .payment-btn {
+                margin-left: auto;
+                margin-right: 0;
             }
             #contact { 
                 padding: 1em;
@@ -559,10 +628,15 @@
                 grid-template-columns: 1fr auto 2fr; 
                 gap: 0.1em;
                 line-height: 1.2;
-                padding-left: 1em;
+                padding-left: 1.7em;
+            }
+            .contact-info i {
+                font-size: 0.95em;
+                margin-right: 0.5em;
             }
             .contact-info p {
                 margin: 0.05em 0;
+                font-size: 0.9em;
             }
             .contact-info p:nth-child(3) {
                 margin-bottom: 0.3em;
@@ -588,8 +662,8 @@
                 width: 30px;
                 height: 30px;
             }
-            .payment-btn, .gallery-btn {
-                padding: 8px 20px;
+            .payment-btn, .gallery-btn, .guide-btn {
+                padding: 8px 0;
                 font-size: 0.8em;
             }
             footer { padding: 0.2em; }
@@ -670,15 +744,18 @@
             <h2>Hubungi Kami</h2>
             <p>Untuk pemasangan atau informasi<br>lebih lanjut, hubungi kami di:</p>
             <div class="contact-info">
-                <p class="label">WhatsApp</p>
-                <p class="colon">:</p>
+                <p class="label"><i class="fab fa-whatsapp"></i> WhatsApp</p>
+                <p class="colon"> : </p>
                 <p><a href="#" onclick="redirectToContactWhatsApp()">0857 7777 3541</a></p>
-                <p class="label">Email</p>
-                <p class="colon">:</p>
+                <p class="label"><i class="fas fa-envelope"></i> Email</p>
+                <p class="colon"> : </p>
                 <p><a href="mailto:halopusatwifisolo@gmail.com?subject=Informasi%20Pasang%20WiFi%20Solo">halopusatwifisolo@gmail.com</a></p>
             </div>
-            <div class="contact-buttons">
+        </section>
+        <section class="guide-section">
+            <div class="links-container">
                 <a href="https://pusatwifisolo.github.io/galeri/" class="gallery-btn">Galeri</a>
+                <a href="https://pusatwifisolo.github.io/panduan/" class="guide-btn">Panduan Layanan</a>
                 <a href="https://pusatwifisolo.github.io/pembayaran/" class="payment-btn">Pembayaran</a>
             </div>
         </section>
